--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "externals/googletest"]
 	path = externals/googletest
 	url = https://github.com/google/googletest.git
+[submodule "externals/faker-cxx"]
+	path = externals/faker-cxx
+	url = https://github.com/cieslarmichal/faker-cxx.git
+[submodule "externals/pfr"]
+	path = externals/pfr
+	url = https://github.com/boostorg/pfr.git
