--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-option(BUILD_CONFIG_CXX_TESTS DEFAULT ON)
+option(BUILD_ORM_CXX_TESTS DEFAULT ON)
 
 if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++20 /permissive- /bigobj")
@@ -25,12 +25,18 @@ set(SOURCES
 
 add_library(${LIBRARY_NAME} ${SOURCES})
 
+add_subdirectory(externals/pfr)
+
+target_link_libraries(${LIBRARY_NAME} PUBLIC Boost::pfr)
+
 target_include_directories(
     ${LIBRARY_NAME}
     INTERFACE "${CMAKE_CURRENT_LIST_DIR}/include"
     PRIVATE "${CMAKE_CURRENT_LIST_DIR}/include")
 
-if (BUILD_CONFIG_CXX_TESTS)
+if (BUILD_ORM_CXX_TESTS)
+    set(BUILD_FAKER_TESTS OFF)
+    add_subdirectory(externals/faker-cxx)
     add_subdirectory(externals/googletest)
 
     set(UT_SOURCES
@@ -47,7 +53,7 @@ if (BUILD_CONFIG_CXX_TESTS)
     add_executable(${LIBRARY_NAME}-UT ${UT_SOURCES})
 
     target_link_libraries(${LIBRARY_NAME}-UT PRIVATE gtest_main gmock_main
-        orm-cxx)
+        orm-cxx faker-cxx)
 
     target_include_directories(
         ${LIBRARY_NAME}-UT
