--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,9 @@ set(SOURCES
 add_library(${LIBRARY_NAME} ${SOURCES})
 
 add_subdirectory(externals/pfr)
+add_subdirectory(externals/reflect-cpp)
 
-target_link_libraries(${LIBRARY_NAME} PUBLIC Boost::pfr)
+target_link_libraries(${LIBRARY_NAME} PUBLIC Boost::pfr reflect-cpp)
 
 target_include_directories(
     ${LIBRARY_NAME}
