replace qtl with SOCI library

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 [submodule "externals/reflect-cpp"]
 	path = externals/reflect-cpp
 	url = https://github.com/getml/reflect-cpp.git
-[submodule "externals/qtl"]
-	path = externals/qtl
-	url = https://github.com/znone/qtl.git
+[submodule "externals/soci"]
+	path = externals/soci
+	url = https://github.com/SOCI/soci.git
