add sqlite database test and add few modification to binding model with sql queries

--- a/.github/workflows/linux-clang-build.yml
+++ b/.github/workflows/linux-clang-build.yml
@@ -29,7 +29,7 @@ jobs:
            && sudo launchpad-getkeys \
            && sudo apt-get update -y \
            && sudo apt-get install -y lld-16 ninja-build build-essential libstdc++-13-dev \
-             clang-16 clang-tools-16 llvm-16 lcov
+             clang-16 clang-tools-16 llvm-16 lcov sqlite3 libsqlite3-dev
 
       - name: Initialize submodules
         run: git submodule update --init --recursive
