--- a/.github/workflows/linux-clang-build.yml
+++ b/.github/workflows/linux-clang-build.yml
@@ -8,7 +8,6 @@ on:
 
 env:
   BUILD_TYPE: Debug
-  GTEST_OUTPUT: xml:report.xml
 
 jobs:
   build:
@@ -47,7 +46,7 @@ jobs:
 
       - name: Run tests
         working-directory: ${{github.workspace}}/build/
-        run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure
+        run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure  --gtest_output=xml:report.xml
       
       - uses: actions/upload-artifact@v3
         if: success() || failure()
