--- a/.github/workflows/linux-clang-build.yml
+++ b/.github/workflows/linux-clang-build.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Run tests
         working-directory: ${{github.workspace}}/build/
-        run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure  --gtest_output=xml:report.xml
+        run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure  --gtest_output=xml:report.xml && ls -la
       
       - uses: actions/upload-artifact@v3
         if: success() || failure()
