--- a/.github/workflows/linux-clang-build.yml
+++ b/.github/workflows/linux-clang-build.yml
@@ -46,9 +46,9 @@ jobs:
 
       - name: Run tests
         working-directory: ${{github.workspace}}/build/
-        run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure  --gtest_output=xml:report.xml && ls -la
-      
-      - uses: actions/upload-artifact@v3
+        run: ./orm-cxx-UT --gtest_output=xml:report.xml
+
+      - uses: actions/upload-artifact@v4
         if: success() || failure()
         with:
           name: test-results
