--- a/.github/workflows/linux-clang-build.yml
+++ b/.github/workflows/linux-clang-build.yml
@@ -53,3 +53,14 @@ jobs:
         with:
           name: test-results
           path: '${{github.workspace}}/build/report.xml'
+
+  report:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: dorny/test-reporter@v1
+        with:
+          artifact: test-results
+          name: test report
+          path: '*.xml'
+          reporter: java-junit
