add permissions to workflow

--- a/.github/workflows/linux-clang-build.yml
+++ b/.github/workflows/linux-clang-build.yml
@@ -6,6 +6,11 @@ on:
       - 'main'
   pull_request:
 
+permissions:
+  contents: read
+  actions: read
+  checks: write
+
 env:
   BUILD_TYPE: Debug
 
