--- a/.github/workflows/linux-clang-build.yml
+++ b/.github/workflows/linux-clang-build.yml
@@ -53,16 +53,8 @@ jobs:
       - name: Run tests
         working-directory: ${{github.workspace}}/build/
         run: |
-          ninja ccov-orm-cxx-UT \
+          ninja orm-cxx-ccov-all \
           && llvm-cov-16 show `cat ccov/binaries.list` -instr-profile=ccov/all-merged.profdata > coverage.txt
-
-      #      - name: Test Report
-      #        uses: dorny/test-reporter@v1
-      #        if: success() || failure()
-      #        with:
-      #          name: GTest
-      #          path: '${{github.workspace}}/build/report.xml'
-      #          reporter: java-junit
 
       - name: Codecov
         uses: codecov/codecov-action@v3.1.4
