--- a/.github/workflows/linux-gxx-build.yml
+++ b/.github/workflows/linux-gxx-build.yml
@@ -6,8 +6,14 @@ on:
       - 'main'
   pull_request:
 
+permissions:
+  contents: read
+  actions: read
+  checks: write
+
 env:
   BUILD_TYPE: Debug
+  SOCI_BACKENDS_PATH: ${{github.workspace}}/build/lib
 
 jobs:
   build:
@@ -19,8 +25,25 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Build docker image
-        run: docker build -t build .
+      - name: Install apt-get dependencies
+        run: |
+          sudo apt-get update -y \
+           && sudo apt-get install -y ninja-build build-essential libstdc++-13-dev \
+             g++-13 sqlite3 libsqlite3-dev
 
-      - name: Run docker container
-        run: docker run build
+      - name: Initialize submodules
+        run: git submodule update --init --recursive
+
+      - name: Configure CMake
+        run: |
+          cmake -B ${{github.workspace}}/build \
+            -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} \
+            -DCMAKE_CXX_COMPILER=/usr/bin/g++-13 \
+            -GNinja
+
+      - name: Build
+        run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+
+      - name: Run tests
+        working-directory: ${{github.workspace}}/build/
+        run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure
